src/test/deca/context/invalid/nonprovided/decl_var_before_type.deca
/*
    Description : test de l'impossibilité de faire une déclaration de variable avant de préciser son type

    Résultat : arbre non construit

*/

{
    a int;
}
